--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       - default
 
   bbus-be:
+    depends_on:
+      - postgres
     container_name: bbus-be
     build:
       context: ./
@@ -49,3 +51,8 @@ networks:
 volumes:
 #  mysql_data:
   postgres:
+
+
+
+
+
