--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,4 @@
 services:
-#  mysql:
-#    image: mysql:8.0
-#    container_name: mysql
-#    cap_add:
-#      - SYS_NICE
-#    restart: always
-#    environment:
-#      - MYSQL_DATABASE=testdb
-#      - MYSQL_ROOT_PASSWORD=password
-#    ports:
-#      - '3306:3306'
-#    volumes:
-#      - mysql_data:/var/lib/mysql
-#      - ./initdb.sql:/docker-entrypoint-initdb.d/initdb.sql
-#    networks:
-#      - default
-
   postgres:
     image: postgres
     container_name: postgres
@@ -26,7 +9,7 @@ services:
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
-      - ./initdb.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./initdb.sql:/docker-entrypoint-initdb.d/initdb.sql
     ports:
       - '5432:5432'
     networks:
