--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,8 +5,8 @@ spring:
   devtools:
     add-properties: true
   datasource:
-    url: jdbc:postgresql://postgres:5432/postgres #for build docker
-#    url: jdbc:postgresql://localhost:5432/postgres #for running test
+#    url: jdbc:postgresql://postgres:5432/postgres #for build docker
+    url: jdbc:postgresql://localhost:5432/postgres #for running test
     username: postgres
     password: password
   jpa:
@@ -37,7 +37,7 @@ openapi:
 
 # Generate HMAC Authentication Code: https://www.devglan.com/online-tools/hmac-sha256-online
 jwt:
-  expiryMinutes: 1
+  expiryMinutes: 60
   expiryDay: 14
   accessKey: 0n7DdBQLmxxWo+3yIuTGfMvEr1ZVhqM7lI9jzCfN1Ps=
   refreshKey: XGTgA+M/suH/HcW/a6B6Dc78VxCGHDPGbsOXPZUfWE0=
